--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -35,6 +35,9 @@
 .skill {
    margin-bottom: 35px;
    position: relative;
+   &:last-child{
+      margin-bottom: 0;
+   }
 }
 
 .skill>p {
@@ -77,7 +80,6 @@
 /* SKILL 1 */
 .skill1 {
    width: 95%;
-
 }
 
 .skill-bar span {
