--- a/sass/_extend.scss
+++ b/sass/_extend.scss
@@ -20,7 +20,7 @@
     h3{
         text-transform: uppercase;
         color: $yellow;
-        margin-bottom: 30px;
+        margin-bottom: 5px;
     }
     p {
         width: 64%;
